----------------------------------
[2009-05-19 Ver 0.41 -> 0.42]
- Fixed bug about non-object function called error when accessed site top.(thx mock)
- 'Wizin' updated from '0.46' to '0.47'.
----------------------------------
[2009-05-19 Ver 0.40 -> 0.41]
- Fixed bug about visible mobile theme when not mobile client access.(thx mbxoops)
- Fixed bug about admin sidemenu notice message.
- Fixed bug about some column's data type.(thx key and yufoufu)
- Fixed bug about parse error on php4.(thx toshikun)
- Fixed bug about get block process twice.(thx masahiro)
- Added emoji input support.(thx mbxoops)
- 'Wizin' updated from '0.42' to '0.46'.
----------------------------------
[2009-04-18 Ver 0.35 -> 0.40]
- Fixed bug about sensitive upper-cese with module dirname.(thx naoto_is)
- Updated constant message 'WIZMOBILE_MSG_UPDATE_***_SETTING_***'.
- Added TextPictogram filter.(special thanks yudoufu!)
- Added 'typecast' emoji images.(special thanks 'TypeCast' project!)
- Added 'ThemeSetting' action.
- Added 'GoogleSetting' action.
- Modified 'BlockSetting' action.
- Deleted unnecessary space in brackets.
- Modified block render logic.
- Modified submenu render logic.
- Update theme logic.
- 'Wizin' updated from '0.38' to '0.42'.
----------------------------------
[2009-02-01 Ver 0.34 -> 0.35]
- 'WizXc' module updated from '0.26' to '0.27'.
- 'Wizin' updated from '0.36' to '0.38'.
----------------------------------
[2009-01-22 Ver 0.33 -> 0.34]
- Added input filter for mobile.(thx naao)
- 'Wizin' updated from '0.35' to '0.36'.
----------------------------------
[2009-01-18 Ver 0.32 -> 0.33]
- Fixed bug about 'default_bid' notice message.(thx guest)
- 'Wizin' updated from '0.32' to '0.35'.
----------------------------------
[2008-12-11 Ver 0.31 -> 0.32]
- Function in "WizMobile_Action.class.php" was rearranged.
- Added doctype declaration.
- Added protect logic for PC access.
- Added mobile input function, and update 'main_login.html' template.